Fix 'Class Diagram Widget Text Truncated Upon Re-Opening XMI' on Windows 10

In ClassifierWidget::drawMembers() and ClassifierWidget::paint() the text
width is now calculated from the width of the widget instead of using the
QFontMetric instance, which fails under certain conditions on Windows 10.

BUG:423660
FIXED-IN:2.31.3 (KDE releases 20.04.3)